--- a/scss/_layout.scss
+++ b/scss/_layout.scss
@@ -65,4 +65,20 @@ footer {
   border-top: 1px solid #eef3fb;
 }
 
+// Layout flex
+.layout-flex {
+  display: flex;
+  gap: 20px;
+  margin-top: 24px;
+}
+
+.aside-filters {
+  flex: 1;
+  max-width: 280px;
+}
+
+.properties-section {
+  flex: 3;
+}
+
 
