--- a/scss/_base.scss
+++ b/scss/_base.scss
@@ -9,7 +9,15 @@ html,
 body {
   height: 100%;
 }
+// <weight>: Use a value from 100 to 900
+// <uniquifier>: Use a unique and descriptive class name
 
+.exo-2-regular {
+  font-family: "Exo 2", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: 400;
+  font-style: normal;
+}
 body {
   margin: 0;
   background: var(--bg);
