--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,7 +1,6 @@
-/*=============== GOOGLE FONTS ===============*/
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&display=swap");
 
-/*=============== VARIABLES CSS ===============*/
+/* variables css */
 :root {
   --header-height: 3.5rem;
 
@@ -17,26 +16,25 @@
   --body-color: hsl(30, 20%, 95%);
   --container-color: hsl(30, 20%, 92%);
 
-  /*========== Font and typography ==========*/
-  --body-font: 'Poppins', sans-serif;
+  /* font size */
+  --body-font: "Poppins", sans-serif;
   --biggest-font-size: 2.25rem;
   --h1-font-size: 1.5rem;
   --h2-font-size: 1.25rem;
   --h3-font-size: 1rem;
-  --normal-font-size: .938rem;
-  --small-font-size: .813rem;
-  --smaller-font-size: .75rem;
+  --normal-font-size: 0.938rem;
+  --small-font-size: 0.813rem;
+  --smaller-font-size: 0.75rem;
 
-  /*========== Font weight ==========*/
+  /* font weights */
   --font-medium: 500;
   --font-semi-bold: 600;
 
-  /*========== z index ==========*/
+  /* z index */
   --z-tooltip: 10;
   --z-fixed: 100;
 }
 
-/* Responsive typography */
 @media screen and (min-width: 1024px) {
   :root {
     --biggest-font-size: 4rem;
@@ -44,12 +42,12 @@
     --h2-font-size: 1.5rem;
     --h3-font-size: 1.25rem;
     --normal-font-size: 1rem;
-    --small-font-size: .875rem;
-    --smaller-font-size: .813rem;
+    --small-font-size: 0.875rem;
+    --smaller-font-size: 0.813rem;
   }
 }
 
-/*=============== BASE ===============*/
+/* base styles  */
 * {
   box-sizing: border-box;
   padding: 0;
@@ -95,12 +93,7 @@ button {
   border: none;
 }
 
-/*=============== REUSABLE CSS CLASSES ===============*/
-.container {
-  max-width: 1024px;
-  margin-left: 1.5rem;
-  margin-right: 1.5rem;
-}
+/* changing structure */
 
 .grid {
   display: grid;
@@ -122,7 +115,7 @@ button {
   width: 100%;
   background-color: transparent;
   z-index: var(--z-fixed);
-  transition: .4s;
+  transition: 0.4s;
 }
 
 nav {
@@ -136,9 +129,9 @@ nav {
   color: #fff;
   display: inline-flex;
   align-items: center;
-  column-gap: .25rem;
+  column-gap: 0.25rem;
   font-weight: var(--font-medium);
-  transition: .3s;
+  transition: 0.3s;
 }
 
 .nav__logo i {
@@ -149,47 +142,10 @@ nav {
   color: var(--first-color);
 }
 
-@media screen and (max-width:1023px) {
-  .nav__menu {
-    position: fixed;
-    bottom: 2rem;
-    background-color: var(--container-color);
-    box-shadow: 0 8px 24px hsla(228, 66%, 45%, .15);
-    width: 90%;
-    left: 0;
-    right: 0;
-    margin: 0 auto;
-    padding: 1.3rem 3rem;
-    border-radius: 1.25rem;
-    transition: .4s;
-  }
-
-  .nav__list {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-  }
-
-  .nav__link {
-    color: var(--text-color);
-    display: flex;
-    padding: 0.5rem;
-    border-radius: 50%;
-  }
-
-  .nav__link i {
-    font-size: 1.25rem;
-  }
-
-  .nav__link span {
-    display: none;
-  }
-}
-
 /* Change background header */
 .scroll-header {
   background-color: var(--body-color);
-  box-shadow: 0 1px 4px hsla(228, 4%, 15%, .1);
+  box-shadow: 0 1px 4px hsla(228, 4%, 15%, 0.1);
 }
 
 .scroll-header .nav__logo {
@@ -204,7 +160,7 @@ nav {
 .active-link {
   background: linear-gradient(101deg, hsl(30, 70%, 53%), hsl(30, 70%, 47%));
   color: #fff;
-  box-shadow: 0 4px 8px hsla(228, 66%, 45%, .25);
+  box-shadow: 0 4px 8px hsla(228, 66%, 45%, 0.25);
 }
 
 /*=============== THEME ===============*/
@@ -212,7 +168,7 @@ nav {
   font-size: 1.25rem;
   color: #fff;
   cursor: pointer;
-  transition: .3s;
+  transition: 0.3s;
 }
 
 .change-theme:hover {
@@ -220,7 +176,7 @@ nav {
 }
 
 /* For large devices - Header responsive */
-@media screen and (min-width:1023px) {
+@media screen and (min-width: 1023px) {
   .nav {
     height: calc(var(--header-height) + 1.5rem);
   }
@@ -266,7 +222,7 @@ nav {
 }
 
 /* For medium devices */
-@media screen and (min-width:576px) {
+@media screen and (min-width: 576px) {
   .nav__menu {
     width: 342px;
   }
@@ -277,4 +233,3 @@ nav {
     padding: 1.3rem 1.5rem;
   }
 }
-
