--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -404,3 +404,113 @@ nav {
 .button:hover {
   box-shadow: 0 4px 12px hsla(228, 66%, 25%, 0.25);
 }
+
+/*LOGOS*/
+.logos__container {
+  /* padding-top: 2rem; */
+  grid-template-columns: repeat(2, 1fr);
+  gap: 3rem 2rem;
+}
+
+.logos__img {
+  text-align: center;
+}
+
+.logos__img img {
+  height: 60px;
+  opacity: .2;
+  transition: .3s;
+}
+
+.logos__img img:hover {
+  opacity: .8;
+}
+
+/*POPULAR*/
+.popular__container {
+  padding: 1rem 0 1.5rem;
+}
+
+.popular__card {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+  width: 290px;
+  padding: 1.5rem 0.5rem;
+  border-radius: 1rem;
+  margin: 0 auto;
+  transition: 0.4s;
+  /* background-color: var(--container-color); */
+}
+
+.popular__img {
+  border-radius: 1rem;
+  margin-bottom: 1rem;
+  max-height: 60vh;
+}
+
+.popular__data {
+  padding: 0 1rem 0 0.5rem;
+}
+
+.popular__price {
+  font-size: var(--h2-font-size);
+  color: var(--text-color);
+  margin-bottom: 0.25rem;
+  /* text-align: center; */
+
+}
+
+.popular__price span {
+  color: var(--second-color);
+  
+}
+
+.popular__title {
+  font-size: var(--h3-font-size);
+  margin-bottom: 0.75rem;
+  /* text-align: center; */
+
+}
+
+.popular__description {
+  /* text-align: center; */
+  font-size: var(--small-font-size);
+}
+
+.popular__card:hover {
+  box-shadow: 0 12px 16px hsla(228, 66%, 45%, .1);
+}
+
+/* Swiper class */
+.swiper-wrapper {
+  margin-bottom: 1.5rem;
+}
+
+.swiper-button-prev::after,
+.swiper-button-next::after {
+  content: '';
+}
+
+.swiper-button-next,
+.swiper-button-prev {
+  top: initial;
+  bottom: 0;
+  width: initial;
+  height: initial;
+  background-color: var(--container-color);
+  border: 2px solid var(--text-color-light);
+  padding: 6px;
+  border-radius: .5rem;
+  font-size: 1.5rem;
+  color: var(--first-color);
+}
+
+.swiper-button-prev {
+  left: calc(50% - 3rem);
+}
+
+.swiper-button-next {
+  right: calc(50% - 3rem);
+}
